<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">acme-explorer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="filter">Filter</string>
    <string name="columns">Columns</string>
    <string name="title">Destino</string>
    <string name="precio">Precio</string>
    <string name="start_date">Start Date</string>
    <string name="date_of_arrival">Fecha de llegada</string>
    <string name="date_of_departure">Fecha de salida</string>
    <string name="description">Descripción</string>
    <string name="origen">Origen</string>
    <string name="filtros">FILTROS</string>
    <string name="fecha_entrada">Fecha Entrada:</string>
    <string name="fecha_salida">Fecha Salida:</string>
    <string name="precio_m_nimo">Precio Mínimo:</string>
    <string name="precio_m_ximo">Precio Máximo:</string>
    <string name="aplicar">APLICAR</string>
    <string name="comprar">COMPRAR</string>

    <string name="login_email_et_hint">Correo electronico</string>
    <string name="login_pass_et_hint">Contraseña</string>
    <string name="login_button_mail_text">Acceder</string>
    <string name="login_button_google_text">acceder con google</string>
    <string name="login_button_register_text">Pulsa aqui para registrarte</string>
    <string name="login_email_error_1">El correo electronico no puede estar vacio</string>
    <string name="login_mail_error_2">La contraseña no puede estar vacia</string>
    <string name="login_mail_access_error">Se ha producido un error al acceder</string>
    <string name="login_verified_mail_error">Aun no has validado tu cuenta, ¿quieres que te enviemos un correo de verificacion?</string>
    <string name="login_verified_error_ok">Enviar Correo</string>
    <string name="login_verified_email_error_send">Hemos enviado un correo de verifiacion a tu direccion</string>
    <string name="login_verified_email_error_no_send">No se ha podido enviar un correo de verificacion a tu cuenta</string>
    <string name="login_verified_error_cancel">Cancelar</string>
    <string name="login_google_play_services_error">Debe actualizar Google Play Services</string>
    <string name="login_download_google_play_services">Actualizar</string>
    <string name="google_play_services_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">994248123205-alethu3vn5vmuiae6f57hvkgcr4fn10g.apps.googleusercontent.com</string>
    <string name="login_completed">Se ha accecido correctamente</string>
    <string name="login_pass_confirm_et_hint">Confirmar Contraseña</string>
    <string name="login_button_signup_text">Registrar usuario</string>
    <string name="signup_error_user">La direccion de correo no es valida</string>
    <string name="signup_error_pass">La contraseña no es valida</string>
    <string name="signup_error_pass_not_match">La contraseñas no coinciden</string>
    <string name="signup_created">El usuario se ha registrado correctamente</string>
    <string name="signup_created_error">El usuario no se ha podido registrar</string>
    <string name="travel_start">Desde</string>
    <string name="travel_end">Hasta</string>
    <string name="take_picture">Obtener imagen</string>
    <string name="take_picture_camera_rationale">Necesita acceder a la camara</string>
    <string name="take_picture_camera_rationale_ok">Permitir</string>
    <string name="camera_not_ganted">no es posible usar la camara</string>
    <string name="storage_not_ganted">no se puede almacenar la foto</string>
    <string name="action_profile_photo">Foto Perfil</string>
    <string name="save_picture">GUARDAR COMO FOTO DE PERFIL</string>
    <string name="action_new_travel">Nuevo Viaje</string>
    <string name="new_travel_button_new">Save Travel</string>
    <string name="destino">Destino</string>
    <string name="empty_fields_trip">Debe rellenar todos los datos</string>
    <string name="travel_inserted">Viaje insertado correctamente.</string>
    <string name="no_trips">No hay viajes. Pruebe a crear uno.</string>
    <string name="save_travel_button_new">Nuevo Viaje</string>
    <string name="no_trips_fav">No hay viajes favoritos.</string>
    <string name="coordinates">Coordenadas Destino</string>
    <string name="open_weather_map_api_key">ec6f60e78b63ed246bcdd0c61908205c</string>
</resources>