<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".NewTravelActivity">


    <TextView
        android:id="@+id/new_travel_txtView_destino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destino"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/new_travel_edit_destino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"
        android:hint="@string/destino" />

    <TextView
        android:id="@+id/new_travel_txtView_origen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/origen"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/new_travel_edit_origen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"
        android:hint="@string/origen" />

    <TextView
        android:id="@+id/new_travel_txtView_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/new_travel_edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"
        android:hint="@string/description" />

    <TextView
        android:id="@+id/new_travel_txtView_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/new_travel_edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"
        android:hint="@string/precio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/fecha_entrada"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/new_travel_textViewStartDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/new_travel_imageViewStartDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_today" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/fecha_salida"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/new_travel_textViewEndDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/new_travel_imageViewEndDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_today" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_travel_button_save"
        android:backgroundTint="@color/blueButton"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:textAllCaps="true"
        android:text="@string/new_travel_button_new"
        android:textColor="@color/white" />

</LinearLayout>