<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterTrips">

    <TextView
        android:id="@+id/textViewFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:padding="10dp"
        android:text="@string/filtros"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewFiltro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minHeight="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/fecha_entrada" />

            <TextView
                android:id="@+id/textViewStartDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewStartDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_today" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minHeight="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/fecha_salida"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewEndDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewEndDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_today" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minHeight="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/precio_m_nimo" />

            <EditText
                android:id="@+id/textViewMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:textStyle="bold"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minHeight="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/precio_m_ximo" />

            <EditText
                android:id="@+id/textViewMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:textStyle="bold"
                android:inputType="number"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/aplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>